Fix options page in dark mode

--- a/src/main/options/styles/mixins.scss
+++ b/src/main/options/styles/mixins.scss
@@ -91,3 +91,8 @@ $sides: (
   }
 }
 
+@mixin generateZIndex($property) {
+  .u-zi-#{$property} {
+    z-index: $property !important;
+  }
+}
